feat(link): add delete link by ID API
